# ice

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  utils.rs
src/commands/: install.rs  mod.rs
