[package]
name = "ice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.0" }
minreq = { version = "2.8.1", features = ["https", "json-using-serde"] }
serde = { version = "1.0.183", features = ["derive"] }
flate2 = { version = "1.0.27" }
tar = { version = "0.4.40" }
regex ={ version = "1.9.3" }
